--- a/css/sell.css
+++ b/css/sell.css
@@ -133,7 +133,7 @@
 #info > br + input {
 	margin-top: 8px;
 }
-#info #condition h3, #info #condition h6 {
+#info #condition h3, #info #condition label {
 	margin: 0;
 	color: #666;
 }
@@ -143,7 +143,7 @@
 	padding-bottom: 10px;
 	font-size: 16px;
 }
-#info #condition h6 {
+#info #condition label {
 	display: inline-block;
 	padding-left: 7px;
 	font-size: 13px;
@@ -151,7 +151,7 @@
 #info #condition h3 + input, #info #condition br + input {
 	margin-left: 32px;
 }
-#info #condition h6 + input {
+#info #condition label + input {
 	margin-left: 10px;
 }
 #info #submit {
